--- a/Laboratorio4.html
+++ b/Laboratorio4.html
@@ -375,6 +375,7 @@
         body.style.backgroundColor = fondo
         body.style.color = letra
     }
+    // comentario
     function cambioTamano(){
         var baner = document.getElementById("banner")
         var tamano = document.getElementById("tamanos").value
@@ -386,5 +387,6 @@
             baner.style.width = tamano
         }
     }
+    //comentario
 </script>
 </html>
